--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
+    
+    <!-- Babel Standalone: Ermöglicht das Ausführen von TSX direkt im Browser -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    
     <style>
       body {
         font-family: 'Inter', sans-serif;
         background-color: #050505;
         color: #ffffff;
         overflow-x: hidden;
+        /* Cursor: none ist aktiv für den Custom Cursor - falls die Seite schwarz bleibt,
+           deaktiviere dies kurz zum Debuggen */
         cursor: none;
       }
       h1, h2, h3, .font-display {
@@ -66,24 +72,27 @@
         90% { transform: translate(10%,5%) }
         100% { transform: translate(5%,0) }
       }
-      .perspective-card {
-        perspective: 1000px;
-      }
     </style>
-  <script type="importmap">
+
+    <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "framer-motion": "https://esm.sh/framer-motion@11.11.11",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "framer-motion": "https://esm.sh/framer-motion@^12.34.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.48.1",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4"
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div class="noise"></div>
     <div id="root"></div>
+
+    <!-- Startet die Anwendung -->
+    <script type="text/babel" data-type="module" src="index.tsx"></script>
   </body>
 </html>
