--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
         background-color: #050505;
         color: #ffffff;
         overflow-x: hidden;
-        /* Cursor: none ist aktiv für den Custom Cursor - falls die Seite schwarz bleibt,
-           deaktiviere dies kurz zum Debuggen */
         cursor: none;
       }
       h1, h2, h3, .font-display {
@@ -80,7 +78,7 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "framer-motion": "https://esm.sh/framer-motion@11.11.11",
+    "framer-motion": "https://esm.sh/framer-motion@11.11.11?deps=react@19.0.0,react-dom@19.0.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/"
